--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -25,6 +25,8 @@ bookmarksopenlevel=10
 }
 \setcounter{tocdepth}{3}
 
+\def\simord{\mathord\sim}
+
 % Other packages
 \usepackage[papersize={7.0in, 10.0in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
 \usepackage[utf8]{inputenc}
@@ -1330,23 +1332,23 @@ In the following we look at some ways to interpret functors between different ty
 \end{eg}
 
 \begin{eg}[sets and relations]\label{equequ}
- Let $(X,\sim)$ and $(Y,\sim)$ be equivalence relations. As we have seen in \Cref{egeq}, these are in particular categories. A functor $F:(X,\sim)\to(Y,\sim)$ is first of all a function $F:X\to Y$. Again, arrows of $X$ have to be mapped into arrows of $Y$, that is, if $x\sim x'$ in $X$, then $Fx \sim Fx'$ in $Y$. Again, the functoriality axioms are guaranteed by uniqueness.
+ Let $(X,\simord)$ and $(Y,\simord)$ be equivalence relations. As we have seen in \Cref{egeq}, these are in particular categories. A functor $F:(X,\simord)\to(Y,\simord)$ is first of all a function $F:X\to Y$. Again, arrows of $X$ have to be mapped into arrows of $Y$, that is, if $x\sim x'$ in $X$, then $Fx \sim Fx'$ in $Y$. Again, the functoriality axioms are guaranteed by uniqueness.
  Therefore \emph{a functor between equivalence relations is the same thing as a map respecting the equivalence}.
  If $x$ and $x'$ are equivalent in $X$, then they have to be mapped into equivalent elements of $Y$. This is sometimes called an \emph{equivariant map for the equivalence relations}. 
 \end{eg}
 
 \begin{caveat}
  In the target category there may be \emph{more relations} than in the source category. In the partial order case, $F:(X,\le)\to (Y,\le)$, it could be that $x\nleq x'$, but still $Fx \leq Fx'$. Relations can be ``created''. The important thing is that they are not ``destructed''.
- Just as well, for $F:(X,\sim)\to(Y,\sim)$ it could be that $x\nsim x'$, but still $Fx \sim Fx'$. The important thing is that if $x\sim x'$, then $Fx \sim Fx'$.
+ Just as well, for $F:(X,\simord)\to(Y,\simord)$ it could be that $x\nsim x'$, but still $Fx \sim Fx'$. The important thing is that if $x\sim x'$, then $Fx \sim Fx'$.
  In the terminology of category theory, relations have to be \emph{preserved}, but not necessarily \emph{reflected}. 
 \end{caveat}
 
 \begin{ex}[sets and relations]\label{quotient}
- Let $(X,\sim)$ be an equivalence relation. Let $X/\sim$ be the \emph{quotient space} of the relation, that is, the set of equivalence classes. We can consider $X/\sim$ a category, where the only arrows are identities. Prove that the quotient map $(X,\sim)\to X/\sim$ assigning to each $x\in X$ its equivalence class $[x]\in X/\sim$ is a functor.
+ Let $(X,\simord)$ be an equivalence relation. Let $X/\simord$ be the \emph{quotient space} of the relation, that is, the set of equivalence classes. We can consider $X/\simord$ a category, where the only arrows are identities. Prove that the quotient map $(X,\simord)\to X/\simord$ assigning to each $x\in X$ its equivalence class $[x]\in X/\simord$ is a functor.
 \end{ex}
 
 \begin{ex}[sets and relations]
- More generally, let $(X,\lesssim)$ be a preorder. Consider the equivalence relation $\sim$ given by \Cref{corepreorder}. Define a partial order $\le$ on the quotient space $X/\sim$ in such a way that the quotient map $(X,\lesssim)\to (X/\sim, \le)$ is a functor. 
+ More generally, let $(X,\lesssim)$ be a preorder. Consider the equivalence relation $\sim$ given by \Cref{corepreorder}. Define a partial order $\le$ on the quotient space $X/\simord$ in such a way that the quotient map $(X,\lesssim)\to (X/\simord, \le)$ is a functor. 
 \end{ex}
 
 For all these examples, by uniqueness we didn't have to worry about checking the functoriality axioms. In general, this is something that needs to be checked, as the next examples will show.
@@ -2803,7 +2805,7 @@ Let's see what happens for posets, equivalence relations and preorders.
   \item Since two elements in a poset are isomorphic if and only if they are equal, essential surjectivity is just surjectivity.
  \end{itemize}
 
- For equivalence relations and preorders, again every functor is automatically faithful, and full precisely if it \emph{reflects} (and not just preserves) the relation. Essential surjectivity is more subtle: given $f:(X,\sim)\to (Y,\sim)$, the function $f$ is essentially surjective if for every $y\in Y$ there exists $x\in X$ such that $f(x)\sim y$. In other words, the image of $f$ is not necessarily the whole of $Y$, but \emph{it hits every equivalence class of $Y$}. 
+ For equivalence relations and preorders, again every functor is automatically faithful, and full precisely if it \emph{reflects} (and not just preserves) the relation. Essential surjectivity is more subtle: given $f:(X,\simord)\to (Y,\simord)$, the function $f$ is essentially surjective if for every $y\in Y$ there exists $x\in X$ such that $f(x)\sim y$. In other words, the image of $f$ is not necessarily the whole of $Y$, but \emph{it hits every equivalence class of $Y$}. 
 \end{eg}
 
 Let's now see what happens for groups (and analogously, for monoids).
@@ -6802,17 +6804,17 @@ Here is a standard example.
 We conclude this section by showing that \emph{not all monads can be thought of as extensions}. The interpretation as extensions is often helpful, but not always accurate, and the reason is that the unit $\eta:X\to TX$ of the monad is not always a monomorphism. This is particularly true for some idempotent monads. Sometimes, for example, the map $\eta$ is even a quotient, so that instead of ``extending'' $X$ it is ``compressing'' it, by identifying different elements. The basic example is the following.
 
 \begin{ex}[sets and relations]
- Let $\cat{Eq}$ be the category whose objects are sets equipped with an equivalence relation $(X,\sim)$, and morphisms are functions respecting the equivalence, i.e.~$x\sim x'$ implies $f(x)\sim f(x')$ (recall \Cref{equequ}).   
- Assign now to each $(X,\sim)$ the quotient set $X/\sim$ obtained by identified all elements of $X$ which are related by $\sim$ (recall \Cref{quotient}). Assume $X/\sim$ equipped with the identity relation. Denote by $q$ the quotient map $(X,\sim)\to X/\sim$.
- Show that given a map $f:(X,\sim)\to(Y,\sim)$ respecting the equivalence there exists a unique map $\tilde{f}:X/\sim\to Y/\sim$ making the following diagram commute.
+ Let $\cat{Eq}$ be the category whose objects are sets equipped with an equivalence relation $(X,\simord)$, and morphisms are functions respecting the equivalence, i.e.~$x\sim x'$ implies $f(x)\sim f(x')$ (recall \Cref{equequ}).   
+ Assign now to each $(X,\simord)$ the quotient set $X/\simord$ obtained by identified all elements of $X$ which are related by $\sim$ (recall \Cref{quotient}). Assume $X/\simord$ equipped with the identity relation. Denote by $q$ the quotient map $(X,\simord)\to X/\simord$.
+ Show that given a map $f:(X,\simord)\to(Y,\simord)$ respecting the equivalence there exists a unique map $\tilde{f}:X/\simord\to Y/\simord$ making the following diagram commute.
  $$
  \begin{tikzcd}
-  (X,\sim) \ar{d}{q} \ar{r}{f} & (Y,\sim) \ar{d}{q} \\
-  X/\sim \uni{r}{\tilde{f}} & Y/\sim
+  (X,\simord) \ar{d}{q} \ar{r}{f} & (Y,\simord) \ar{d}{q} \\
+  X/\simord \uni{r}{\tilde{f}} & Y/\simord
  \end{tikzcd}
  $$
  Why is this map well-defined? (Reading \Cref{eq} again may help you.)
- The assignment $(X,\sim)\mapsto X/\sim$, $f\mapsto\tilde{f}$ is therefore an endofunctor on $\cat{Eq}$.
+ The assignment $(X,\simord)\mapsto X/\simord$, $f\mapsto\tilde{f}$ is therefore an endofunctor on $\cat{Eq}$.
  
  Show that this functor induces an idempotent monad on $\cat{Eq}$, with unit given by the quotient map $q$.
 \end{ex}
