--- a/1912.10642v6/ct-notes-new-eu.tex
+++ b/1912.10642v6/ct-notes-new-eu.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{scrbook}
+\documentclass[12pt,oneside,headngs=small]{scrbook}
 %\documentclass[a4paper,12pt]{article}
 
 % bibliography stuff
