--- a/psu-yoneda/psu-yoneda.tex
+++ b/psu-yoneda/psu-yoneda.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage{amsthm,thmtools}
+\usepackage{amsthm}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
@@ -17,8 +17,9 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
+\usepackage{eulervm}
 \linespread{1.05}
-\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -35,6 +36,8 @@ bookmarksopenlevel=10
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
+\theoremstyle{definition}
+
 \newtheorem{thm}{Theorem}[]
 \newtheorem{lemma}[thm]{Lemma}
 
@@ -42,7 +45,7 @@ bookmarksopenlevel=10
 \newtheorem{defn}{Definition}[]
 \newtheorem{example}{Example}[]
 
-\theoremstyle{remark}
+\theoremstyle{definition}
 \newtheorem{remark}{Remark}[]
 \newtheorem{note}{Note}[]
 
@@ -75,7 +78,7 @@ bookmarksopenlevel=10
 \titleformat*{\subsubsection}{\scshape}
 \begin{document}
 
-\title{The Yoneda Lemma, Top Down}
+\title{The Yoneda Lemma as Fast as Possible}
 \author{Pete Su}
 
 \maketitle
@@ -108,121 +111,160 @@ the lemma says. Then you have to flip back and forth through a hundred pages of 
 to remember what all the symbols mean.
 
 I am going to do the following dumb thing: I am going to state the result in several
-different kinds of notation and then explain the pieces from the bottom up (or top down).
-Also hopefully I'll provide handy cross references and call backs so you don't have to do
-all that page flipping.
+different kinds of notation and then define the pieces as fast as possible and with handy cross references
+so you don't have to do all that page flipping.
 
 Note that I am not a mathematician or a category theory expert. I'm just a guy trying to
-figure out the notation. So up to half of everything in this document is probably wrong.
+figure out the notation. So everything in this document is probably wrong.
 
 \section{Statement of the Lemma}
 
-The hardest thing about stating the result is deciding what notation to use to state it.
-There are a ton of choices, all of which use one of three or four different notational
-templates.
+To me the hardest thing about understanding this result is unwrapping the notation to use to state it.
+There are a ton of different styles, all of which layer multiple ideas on top of each other in a way that
+makes the statement of the lemma very compact textually and very dense conceptually. Here are a few examples.
+
+\newpage
 
 \begin{lemma}[Yoneda]   
 \label{yoneda1}
-Let $\cat{C}$ be a locally small category.  Then
+Let $\CC$ be a locally small category.  Then
 % 
 \begin{equation}        
 \label{eq:yoneda}
-\pshf{\cat{C}}(\h_X, F)
+\pshf{\CC}(\h_X, F)
 \iso
-F(C)
+F(X)
 \end{equation}
 % 
-naturally in $X \in \cat{C}$ and $F \in \pshf{\cat{C}}$.  
+naturally in $X \in \CC$ and $F \in \pshf{\CC}$.  
 \end{lemma}
 
-\begin{lemma}[Yoneda]\label{yoneda2}
- Let $\cat{C}$ be a category, let $X$ be an object of $\cat{C}$, and let $F:\cat{C}^\op\to\Set$ be a presheaf on $\cat{C}$. 
- Consider the map 
- $$
- \Hom_{[\cat{C}^\op,\Set]} \big( \Hom_\cat{C} (-,X) , F \big) \longrightarrow FX
- $$
- assigning to a natural transformation $\alpha:\Hom_\cat{C} (-,X)\Rightarrow F$ the element $\alpha_X(\id_X)\in FX$, which is the value of the component $\alpha_X$ of $\alpha$ on the identity at $X$. 
-\end{lemma}
-
-
-\begin{lemma}[Yoneda]\label{yoneda3} Let $\cat{C}$ be a locally small category and $X \in
-\cat{C}$. Then for any functor $F : \cat{C} \to \Set$ there is a bijection
+\begin{lemma}[Yoneda]\label{yoneda2} Let $\CC$ be a locally small category and $X \in
+\CC$. Then for any functor $F : \CC \to \Set$ there is a bijection
 $$
-\Hom(\cat{C}(X,-), F) \iso Fc
+\Hom(\CC(X,-), F) \iso FX
 $$
-that associates a natural transformation $\alpha:\cat{C}(X,-) \implies F$ to the element
+that associates a natural transformation $\alpha:\CC(X,-) \implies F$ to the element
 $\alpha_X(1_X) \in FX$. Moreover, this correspondence is natural in both $X$ and $F$.
 \end{lemma}
 
 \noindent This verison introduces the $\Nat$ notation for the set of natural transforms.
 
-\begin{lemma}[Yoneda]\label{yoneda4} For any locally small category $\cat{C}$, object $X
-\in \cat{C}$, and functor $F:\cat{C} \to \Set$ we have  $\Nat(\cat{C}(X,-),F) \iso FX$
-both naturally in $X \in \cat{C}$ and $F \in [\cat{C}, \Set]$
+\begin{lemma}[Yoneda]\label{yoneda3} For any locally small category $\CC$, object $X
+\in \CC$, and functor $F:\CC \to \Set$ we have  $\Nat(\CC(X,-),F) \iso FX$
+both naturally in $X \in \CC$ and $F \in [\CC, \Set]$
 \end{lemma}
 
 \noindent You can also write that one the dual way:
-\begin{lemma}[Yoneda]\label{yoneda4-dual} For any locally small category $\cat{C}$, object
-$X \in \cat{C}$, and functor $F:\cat{C}^{\op} \to \Set$ we have  $\Nat(\cat{C}(-,X),F)
-\iso FX$ both naturally in $X \in \cat{C}$ and $F \in [\cat{C}^{\op}, \Set]$
+\begin{lemma}[Yoneda]\label{yoneda4} For any locally small category $\CC$, object
+$X \in \CC$, and functor $F:\CC^{\op} \to \Set$ we have  $\Nat(\CC(-,X),F)
+\iso FX$ both naturally in $X \in \CC$ and $F \in [\CC^{\op}, \Set]$
 \end{lemma}
 \noindent
 This version peels away some of the layers:
 
 \begin{lemma}[Yoneda]\label{yoneda5}
-Let $\cat{C}$ be a locally small category, let $X$ be an object of $\cat{C}$, and let $F: \cat{C} \to \Set$ be a functor. Then
+Let $\CC$ be a locally small category, let $X$ be an object of $\CC$, and let $F: \CC \to \Set$ be a functor. Then
 
-(i) There is a bijection between natural transformations $\cat{C}(X, -) \to F$ and the elements of $FX$
+(i) There is a bijection between natural transformations $\CC(X, -) \to F$ and the elements of $FX$
 
 (ii) The bijection in (i) is natural in both $F$ and $X$.
 \end{lemma}
 
 \noindent
-I've made these look a bit more uniform than they do in real life just by using the same style of typesetting for all of them. But, there is still a lot of notation flying around, so let's get into it.
+These examples cover the range of different notational schemes used to write down this result. I've made them look a bit more uniform than they do in real life just by using the same style of typesetting for all of them. But, there is still a lot of notation flying around here. So let's get into it.
+
+\newpage
 
 \section{Categories}
 
+Categories have a deliciously multi-part definition.
+
 \begin{defn}
-A {\it category}%
-%
-\index{category}
-%
-$\cat{C}$ consists of:
+\label{category}
+A {\it category} $\CC$ consists of:
 % 
 \begin{itemize}
 \item 
-A collection of objects denoted $\objc$. In general we won't bother to write out $\objc$
-and instead just say $\cat{C}$ when the context makes clear what is going on.
-\item 
-For each $A, B \in \objc$, a collection $\Arrows_{\cat{C}}(A, B)$%
-of {\it arrows} or {\it mappings} or {\it functions} or {\it morphims} from $A$ to $B$. We will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. Or we won't bother at all and just write $f: A \to B$ to mean $f \in \Arrows_{\cat{C}}(A,B)$.
+A collection of {\it objects} that we will denote with upper case letters $X, Y, Z, ...$, and so on.  
+We call this collection $\objc$. Traditionally people write just $\CC$ to mean $\objc$ when the context makes clear what is going on.
 \item
-For each $A, B, C \in \objc$ a function called {\it composition} that takes $f:A \to B$ and $g : B \to C$ and maps it to $g \circ f$.
-\item
-For each $A \in \objc$ a function $1_A: A \to A$, called the {\it identity} at $A$ that
-maps $A$ to itself. \end{itemize}%
-Generally we denote objects in categories using upper case letters ($A, B,C$, etc) and
-arrows using lower case letters ($f, g, h$, etc).
-
-Finally, The objects and arrows of a category satisfy the following rules:
+A collection of {\it arrows} denoted with lower case letters $f, g, h, ...$, and so on. Other names for {\it arrows} include {\it mappings} or {\it functions} or {\it morphims}. We will call this collection $\Arrows(\CC)$.
+\end{itemize}%
+The objects and arrows of a category satisfy:
 \begin{itemize}
-\item For any $f: A \to B$ we have that  $1_B \circ f$ and $f \circ 1_A$ are both equal to $f$.
-\item Given $f: A \to B$, $g: B \to C$, $h: C\to D$ we have that $(h \circ g) \circ f = h \circ (g \circ f)$.%
+\item
+Each arrow $f$ maps one object $A \in \objc$ to another object $B \in \objc$ and we denote this by writing $f: A \to B$. Here $A$ is called the {\it domain} of $f$ and $B$ the {\it codomain}.
+
+\item
+For each pair of arrows $f:A \to B$ and $g : B \to C$ we can form a new arrow $g \circ f: A \to C$ called the {\it composition} of $f$ and $g$. This is also sometimes written $gf$.
+\item
+For each $A \in \objc$ there is a function $1_A: A \to A$, called the {\it identity} at $A$ that
+maps $A$ to itself.
+\end{itemize}
+Finally, we have the last two rules:
+
+\begin{itemize}
+\item For any $f: A \to B$ we have that $1_B \circ f$ and $f \circ 1_A$ are both equal to $f$. 
+\item Given $f: A \to B$, $g: B \to C$, $h: C\to D$ we have that $(h \circ g) \circ f = h \circ (g \circ f)$, or alteratively $(hg)f$ = $h(gf)$. What this also means is that we can always just write $hgf$ if we want.
 \end{itemize}%
 \end{defn}%
 \noindent
-Often people write $\Hom(A, B)$ or $\Hom_{\cat{C}}(A,B)$ to mean $\Arrows(A,B)$. ``Hom'' stands for homomorphism, which is a word that is used a lot in mathematics to mean mappings of functions that preserve some kind of structure. Presumably this is also where the term {\it morphism} comes from. I like {\it arrow} because it just sounds more friendly and less abstract.
+We call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$. 
+We will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. 
+Traditionally people write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or just $\CC(A,B)$ to mean $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a word that often means mappings that preserve some kind of structure.
 
-At this point the category theory book will list a few dozen examples of categories that maybe help you work out what's going on and maybe don't. One thing is for sure: they will all have short names that have been truncated in a bizzarre way ($\cat{Meas}$, $\cat{Toph}$, $\cat{Grp}$, $\cat{FinOrd}$, etc), and they will all be typeset in a different font. Often you will see {\sc small caps} or {\sf sans serif}. I picked {\bf bold} for convenience.
+At this point every category theory book will list a few dozen examples of categories that show up in various areas of math. These will have strangely truncated names like $\cat{Meas}$ and $\cat{Grp}$ and will be typeset in a different font. For these short notes I think the only specific category that we will run into is $\cat{Set}$, where the objects are sets and the arrows are mappings between sets.
 
+Speaking of sets. In the definition of categories we were careful about not calling anything a {\it set}. This is because some categories involve collections of things that are too ``large'' to be called sets and not get into set theory trouble. Here are two more short definitions about this that we will need.
 
-\section{Sets of Mappings in Categories}
+\begin{defn}
+A category $\CC$ is called {\it small} if $\Arrows(\CC)$ is a set.
+\end{defn}
+
+\begin{defn}
+A category $\CC$ is called {\it locally small} if $\Arrows_{\CC}(A,B)$ is a set for every $A, B \in \CC$.
+\end{defn}%
+\noindent
+For the rest of this note we will only deal with locally small categories, since in the the setup for the Lemma, we are given a category $\CC$ that is locally small. Next we need to know what functors are.
 
 \section{Functors}
+
+As we navigate our way from basic categories up to the statement of the lemma we will travel through multiple layers conceptual abstraction. Functors are the first step up this ladder. Functors are the {\it arrows between categories}. That is, if you were to define the category where the objects were  categories of some kind then the arrows would be functors. Of course you have to be careful about how you do this to not get into set theory trouble, but if all the categories are small it works out.
+
+\begin{defn}
+Given two categories $\CC$ and $\DD$ a {\it functor} $F : \CC \to \DD$ is defined by two sets of parallel rules. First:
+\begin{itemize}
+\item For each object $X \in \CC$ we assign an object $F(X) \in \DD$.
+\item For each arrow $f: X \to Y$ in $\CC$ we assign an arrow $F(f): F(X) \to F(Y)$.
+\end{itemize}
+\noindent
+So $F$ maps objects in $\CC$ to objects in $\DD$ and maps the domains and codomains of arrows in $\CC$ to the appropriate objects in $\DD$. In addition the following must be true:
+\begin{itemize}
+\item If $f:X \to Y$ and $g: Y \to Z$ are arrows in $\CC$ then $F(g \circ f) = F(g) \circ F(f)$ (or $F(gf) = F(g)F(f)$).
+\item For every $X \in \CC$ it is the case that $F(1_X) = 1_{F(X)}$.
+\end{itemize}
+
+\end{defn}
+\noindent
+So, a functor consists of two mappings, one on objects and one on arrows. And, these mappings preserve all of the structure of a category, 
+namely domains and codomains, composition, and identities.
+
+\begin{defn}
+Given any functor $F: \CC \to \DD$ from a category $\CC$ to another category $\DD$ and an object $X \in \CC$ we may write $F X$ to mean $F(X)$. This is analogous to the more compact notation for composition of arrows above.
+\end{defn}
+\noindent
+Some of the statements of the Lemma use this notation for both arrows and functors.
+
+Functors are notationally confusing because we are using one letter to denote two mappings. So if $F: \CC \to \DD$ and $X \in \CC$ then $F(X)$ is the functor applied to the object, which will be an object in $\DD$. On the other hand, if $x : A \to B$ is an arrow in $\CC$ then $F(x)$ is an arrow in $\DD$. This seems obvious from the definition but in proofs and calculations the notations will often shift back and forth without enough context and can be very confusing.
+
+Functors appear in the Lemma in a couple of places. The core content of the result has to do with when one set of functors is isomorphic (in some sense) to another set of functors. To see how we study that question we need go up one more step in our abstraction ladder and ask: what do arrows between functors look like?
 
 \section{Natural Transformations}
 
 \section{Functor Categories}
+
+\section{Duals}
 
 \section{The Full Stack}
 
