--- a/psu-yoneda/psu-yoneda.tex
+++ b/psu-yoneda/psu-yoneda.tex
@@ -80,11 +80,11 @@ bookmarksopenlevel=10
 \titleformat*{\subsubsection}{\scshape}
 \begin{document}
 
-\title{The Yoneda Lemma as Fast as Possible}
-\author{Pete Su}
+\title{\Large The Yoneda Lemma Speedrun}
+\author{\large Pete Su}
+\date{}
 
 \maketitle
-\newpage
 
 \section{The Big Picture}
 
@@ -109,23 +109,21 @@ In particular the result ties together the following sets of ideas:
 \noindent
 What most textbooks and notes do is to spend several chapters and sections defining and
 giving examples and intuition about what all these things are, and then telling you what
-the lemma says. Then you have to flip back and forth through a hundred pages of exposition
-to remember what all the symbols mean.
+the Lemma says. Then to parse the Lemma you have to flip back and forth through a hundred 
+pages of exposition to remember what all the symbols mean.
 
 I am going to do the following dumb thing: I am going to state the result in several
-different kinds of notation and then define the pieces as fast as possible and with handy cross references
-so you don't have to do all that page flipping.
+different kinds of notation and then define the only the pieces we need to make that notation make sense as fast as possible.
+In the spirit of video game speedruns, it will be just what is absolutely necessary, and hopefully save us some page flipping.
 
 Note that I am not a mathematician or a category theory expert. I'm just a guy trying to
 figure out the notation. So everything in this document is probably wrong.
 
 \section{Statement of the Lemma}
 
-To me the hardest thing about understanding this result is unwrapping the notation to use to state it.
+To me the hardest thing about understanding this result is unwrapping the notation used to state it.
 There are a ton of different styles, all of which layer multiple ideas on top of each other in a way that
 makes the statement of the lemma very compact textually and very dense conceptually. Here are a few examples.
-
-\newpage
 
 \begin{lemma}[Yoneda]   
 \label{yoneda1}
@@ -190,8 +188,6 @@ Let $\CC$ be a locally small category, let $X$ be an object of $\CC$, and let $F
 
 \noindent
 These examples cover the range of different notational schemes used to write down this result. I've made them look a bit more uniform than they do in real life just by using the same style of typesetting for all of them. But, there is still a lot of notation flying around here. So let's get into it.
-
-\newpage
 
 \section{Categories}
 
@@ -284,7 +280,7 @@ Functors appear in the Lemma in a couple of places. The core content of the resu
 Natural transformations map functors to functors in the same way that arrows in a category map objects to objects. The definition is a bit more complicated and abstract, but that's what it ultimately means.
 
 \begin{defn}
- Let $\CC$ and $\DD$ be categories, and let $F$ and $G$ be functors $\CC\to\DD$. To define a \emph{natural transformation} $\alpha$ from $F$ to $G$, 
+ Let $\CC$ and $\DD$ be categories, and let $F$ and $G$ be functors $\CC \to \DD$. To define a \emph{natural transformation} $\alpha$ from $F$ to $G$, 
 we assign to each object $X$ of $\CC$, an arrow $\alpha_X:FX\to GX$ in $\DD$, called the \emph{component} of $\alpha$ at $X$. In addition, for each arrow $f:X\to Y$ of $\CC$, the following diagram has to commute:
   $$
   \begin{tikzcd}
@@ -304,7 +300,7 @@ We denote natural transformations as double arrows, $\alpha: F \Rightarrow G$, t
  \end{tikzcd}
  $$
 
-You might wonder to yourself: what makes natural transformations ``natural''? The answer appears to be related to the fact that you can construct them from {\it only} what is given to you in the category at hand, they apply in some sense universally over all the objects of the category, and you don't need to make any other specific assumptions about the objects or functors in order for construction to work. In this sense they define a relationship between functors that is just sitting there for you to grab in a ``natural'' way.
+You might wonder to yourself: what makes natural transformations ``natural''? The answer appears to be related to the fact that you can construct them from {\it only} what is given to you in the categories at hand. The natural transformation takes the action of $F$ on $\CC$ and lines it up exactly with the action of $G$ on $\CC$. No other assumptions or conditions are needed. In this sense they define a relationship between functors that is just sitting there in the world no matter what, and thus ``natural''.
 
 \section{Functor Categories}
 
