--- a/1912.10642v6/ct-notes-new.tex
+++ b/1912.10642v6/ct-notes-new.tex
@@ -3113,7 +3113,7 @@ Just as well, the topology presheaf $O$ extracts from a space $X$ all the possib
 \end{eg}
 
 \begin{eg}[group theory]\label{BGrepr}
- Let $G$ be a group. We have seen (\Cref{perm}) that a functor $F:\cat{B}G\to\Set$ is a permutation representation of $G$, that is, a set $X$ (which the image $F\bullet$ of the unique object $\bullet$ of $\cat{B}G$) equipped with an action of $G$ on $X$. When is this functor representable?
+ Let $G$ be a group. We have seen (\Cref{perm}) that a functor $F:\cat{B}G\to\Set$ is a permutation representation of $G$, that is, a set $X$ (which is the image $F\bullet$ of the unique object $\bullet$ of $\cat{B}G$) equipped with an action of $G$ on $X$. When is this functor representable?
  
  Plugging in the definition: $F$ is representable if for some object of $\cat{B}G$ (there is only one possible object, namely $\bullet$), $F$ is naturally isomorphic to $\Hom_{\cat{B}G}(\bullet, -)$. This in turns means that for every object of $\cat{B}G$ (again, there is only one, $\bullet$), we have that $F\bullet \cong \Hom_{\cat{B}G}(\bullet, \bullet)$, and that this bijection is natural. Now, $F\bullet$ is exactly the set $X$ on which $G$ is acting. And $\Hom_{\cat{B}G}(\bullet, \bullet)$ is the set of arrows of $\cat{B}G$ from $\bullet$ to $\bullet$, which by definition is the set of elements of $G$. Therefore, in order for $F$ to be representable, we need $X$ to be isomorphic to the underlying set $U(G)$ of $G$. That is, the group has to act on itself ($g\in G$ acts on the element $h\in G$ by mapping it to $gh\in G$). Moreover, the naturality condition says that the isomorphism $X\to U(G)$ has to be $G$-equivariant, that is, $X$ and $U(G)$ must also be isomorphic as $G$-sets. 
 \end{eg}
