cut down the macros

--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -99,7 +99,7 @@ In particular the result ties together the following sets of ideas:
 \begin{itemize}
 
 \item Categories (objects and arrows).
-\item Sets of mappings in categories
+\item Categories and sets
 \item Functors
 \item Natural transformations
 \item Functor categories
@@ -144,7 +144,7 @@ naturally in $X \in \CC$ and $F \in \pshf{\CC}$.
 $$
 \Hom(\CC(X,-), F) \iso FX
 $$
-that associates a natural transformation $\alpha:\CC(X,-) \implies F$ to the element
+that associates a natural transformation $\alpha:\CC(X,-) \Rightarrow F$ with the element
 $\alpha_X(1_X) \in FX$. Moreover, this correspondence is natural in both $X$ and $F$.
 \end{lemma}
 
@@ -168,7 +168,7 @@ This version has some different notation and terminology:
  Let $\cat{C}$ be a category, let $X$ be an object of $\cat{C}$, and let $F:\cat{C}^\op\to\Set$ be a presheaf on $\cat{C}$. 
  Consider the map 
  $$
- \Hom_{[\cat{C}^\op,\Set]} \big( \Hom_\cat{C} (-,X) , F \big) \longrightarrow FX
+ \Hom_{[\cat{C}^\op,\Set]} \bigl(\Hom_\cat{C} (-,X) , F \bigr) \longrightarrow FX
  $$
  assigning to a natural transformation $\alpha:\Hom_\cat{C} (-,X)\Rightarrow F$ the element $\alpha_X(\id_X)\in FX$, which is the value of the component $\alpha_X$ of $\alpha$ on the identity at $X$. 
 
@@ -219,13 +219,21 @@ Finally, we have the last two rules:
 
 \begin{itemize}
 \item For any $f: A \to B$ we have that $1_B \circ f$ and $f \circ 1_A$ are both equal to $f$. 
-\item Given $f: A \to B$, $g: B \to C$, $h: C\to D$ we have that $(h \circ g) \circ f = h \circ (g \circ f)$, or alteratively $(hg)f$ = $h(gf)$. What this also means is that we can always just write $hgf$ if we want.
+\item Given $f: A \to B$, $g: B \to C$, $h: C\to D$ we have that $(h \circ g) \circ f = h \circ (g \circ f)$, or alternatively $(hg)f$ = $h(gf)$. What this also means is that we can always just write $hgf$ if we want.
 \end{itemize}%
 \end{defn}%
 \noindent
 We will call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$. 
 We will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. 
 Traditionally people write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or just $\CC(A,B)$ to mean $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a word that often means mappings that preserve some kind of structure.
+
+One auxiliary notion that we'll need later is the idea of an {\it isomorphism} which is an invertible mapping that preserves the right kind of structure.
+
+\begin{defn}
+An arrow $f: X \to Y$ in a category $\CC$ is an {\it isomorphism} is there exists a map $g: B \to A$ such that $gf = 1_X$ and $fg = 1_Y$.
+\end{defn}
+
+So in regular set theory the isomorphisms are exactly the invertible mappings between sets.
 
 At this point every category theory book will list a few dozen examples of categories that show up in various areas of math. These will have strangely truncated names like $\cat{Meas}$ and $\cat{Grp}$ and will be typeset in a different font. For these short notes I think the only specific category that we will run into is $\cat{Set}$, where the objects are sets and the arrows are mappings between sets.
 
@@ -296,11 +304,11 @@ We denote natural transformations as double arrows, $\alpha: F \Rightarrow G$, t
  $$
  \begin{tikzcd}[column sep=large]
   \CC \ar[bend left,""{below,name=F}]{r}{F} \ar[bend right,""{above,name=G}]{r}[swap]{G} & \DD
-  \ar[Rightarrow,from=F,to=G,"\alpha"]
+  \ar[Rightarrow,from=F,to=G,"\,\alpha"]
  \end{tikzcd}
  $$
 
-You might wonder to yourself: what makes natural transformations ``natural''? The answer appears to be related to the fact that you can construct them from {\it only} what is given to you in the categories at hand. The natural transformation takes the action of $F$ on $\CC$ and lines it up exactly with the action of $G$ on $\CC$. No other assumptions or conditions are needed. In this sense they define a relationship between functors that is just sitting there in the world no matter what, and thus ``natural''.
+You might wonder to yourself: what makes natural transformations ``natural''? The answer appears to be related to the fact that you can construct them from {\it only} what is given to you in the categories at hand. The natural transformation takes the action of $F$ on $\CC$ and lines it up exactly with the action of $G$ on $\CC$. No other assumptions or conditions are needed. In this sense they define a relationship between functors that is just sitting there in the world no matter what, and thus ``natural''. Another apt way of putting this is that natural transformations give a canonical way of mapping between the images of two functors.
 
 \section{Functor Categories}
 
@@ -310,7 +318,7 @@ You might wonder to yourself: what makes natural transformations ``natural''? Th
 
 \section{Notes}
 
-Category theory texts love to overload notation, so I've done it too. Here is a list of some examples.
+Category theory loves overloaded notation, so I've done it too. Here is a list of some examples.
 
 No two writers seem to agree on what basic notations to use for basic concepts. So I've made up my own shit too.
 
@@ -318,6 +326,24 @@ In the modern world of \LaTeX\ there is no reason to limit names to being only f
 
 \section{Who I Stole From}
 
+\small
+\begin{itemize}
+\item \url{https://arxiv.org/abs/1912.10642}
 
+\item \url{https://math.jhu.edu/~eriehl/context/}
+
+\item \url{https://arxiv.org/abs/1612.09375}
+
+\item \url{https://www.logicmatters.net/2018/01/29/category-theory-a-gentle-introduction/}
+
+\item \url{http://pi.math.cornell.edu/~dmehrle/notes/partiii/cattheory_partiii_notes.pdf}
+
+\item \url{http://www.julia-goedecke.de/pdf/CategoryTheoryNotes.pdf}
+
+\end{itemize}
+
+And of course, a bit from
+
+\url{https://en.wikipedia.org/wiki/Categories_for_the_Working_Mathematician}
 
 \end{document}
