--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -1,88 +1,12 @@
 \documentclass[12pt]{article}
-\usepackage{amsthm}
-
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-\usepackage[noBBpl,sc]{mathpazo}
-\usepackage{eulervm}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\sloppy
-\raggedbottom
-\pagestyle{plain}
-\usepackage{tikz}
-\usepackage{tikz-cd}
 
 \input macros
 
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
-
-% make sure there is enough TOC for reasonable pdf bookmarks.
-\setcounter{tocdepth}{3}
-
-\theoremstyle{definition}
-
-\newtheorem{thm}{Theorem}[]
-\newtheorem{lemma}[thm]{Lemma}
-
-\theoremstyle{definition}
-\newtheorem{defn}{Definition}[]
-\newtheorem{example}{Example}[]
-
-\theoremstyle{definition}
-\newtheorem{remark}{Remark}[]
-\newtheorem{note}{Note}[]
-
-\numberwithin{equation}{section}
-
-
-%    Blank box placeholder for figures (to avoid requiring any
-%    particular graphics capabilities for printing this document).
-\newcommand{\blankbox}[2]{%
-  \parbox{\columnwidth}{\centering
-%    Set fboxsep to 0 so that the actual size of the box will match the
-%    given measurements more closely.
-    \setlength{\fboxsep}{0pt}%
-    \fbox{\raisebox{0pt}[#2]{\hspace{#1}}}%
-  }%
-}
-
-\titleformat{\section}[block]
-  {\fillast}
-  {\bfseries{\thesection }.}
-  {1ex minus .1ex}
-  {\bfseries}
-  
-\titleformat{\subsection}[block]
-  {\fillast}
-  {{\it \thesection }.}
-  {1ex minus .1ex}
-  {\it}
-
-\titleformat*{\subsubsection}{\scshape}
 \begin{document}
 
 \title{\Large The Yoneda Lemma Speedrun}
 \author{\large Pete Su}
-\date{}
+\date{\large 31 October 2021}
 
 \maketitle
 
