--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -151,17 +151,11 @@ We will call the collection of all arrows from $A$ to $B$ $\Arrows_{\CC}(A, B)$.
 We will usually write $\Arrows(A,B)$ when it's clear what category $A$ and $B$ come from. 
 Traditionally people write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or just $\CC(A,B)$ to mean $\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a word that often means mappings that preserve some kind of structure.
 
-One auxiliary notion that we'll need later is the idea of an {\it isomorphism} which is an invertible mapping that preserves the right kind of structure.
+At this point every category theory book will list a few dozen examples of categories that show up in various areas of math. These will have strangely truncated names like $\cat{Measu}$ or $\cat{Htpy}$ or $\cat{Matr}$%
+\footnote{The general fear of readable names in the mathematical literature is fascinating to me, having spent most of my life trying to think up readable names in program source code. In the modern world of \LaTeX\ there is no reason to limit names to being only four or five random letters in length. Thus, I have done the unthinkable and written many names out in full.}%
+and will be typeset in a different font. For these short notes I think the only specific category that we will run into is $\cat{Set}$, where the objects are sets and the arrows are mappings between sets.
 
-\begin{defn}
-An arrow $f: X \to Y$ in a category $\CC$ is an {\it isomorphism} is there exists a map $g: B \to A$ such that $gf = 1_X$ and $fg = 1_Y$.
-\end{defn}
-
-So in regular set theory the isomorphisms are exactly the invertible mappings between sets.
-
-At this point every category theory book will list a few dozen examples of categories that show up in various areas of math. These will have strangely truncated names like $\cat{Meas}$ and $\cat{Grp}$ and will be typeset in a different font. For these short notes I think the only specific category that we will run into is $\cat{Set}$, where the objects are sets and the arrows are mappings between sets.
-
-Speaking of sets. In the definition of categories we were careful about not calling anything a {\it set}. This is because some categories involve collections of things that are too ``large'' to be called sets and not get into set theory trouble. Here are two more short definitions about this that we will need.
+Speaking of sets, the definition of categories we were careful about not calling anything a {\it set}. This is because some categories involve collections of things that are too ``large'' to be called sets and not get into set theory trouble. Here are two more short definitions about this that we will need.
 
 \begin{defn}
 A category $\CC$ is called {\it small} if $\Arrows(\CC)$ is a set.
@@ -171,11 +165,25 @@ A category $\CC$ is called {\it small} if $\Arrows(\CC)$ is a set.
 A category $\CC$ is called {\it locally small} if $\Arrows_{\CC}(A,B)$ is a set for every $A, B \in \CC$.
 \end{defn}%
 \noindent
-For the rest of this note we will only deal with locally small categories, since in the the setup for the Lemma, we are given a category $\CC$ that is locally small. Next we need to know what functors are.
+For the rest of this note we will only deal with locally small categories, since in the the setup for the Lemma, we are given a category $\CC$ that is locally small.
+
+Finally, one more notion that we'll need later is the idea of an {\it isomorphism}.
+
+\begin{defn}
+An arrow $f: X \to Y$ in a category $\CC$ is an {\it isomorphism} if there exists an arrow $g: B \to A$ 
+such that $gf = 1_X$ and $fg = 1_Y$. We say that the objects $X$ and $Y$ are {\it isomorphic} 
+to each other whenever there exists an isomorphism between them. 
+If two objects in a category are isomorphic to each other we write $X \iso Y$.
+\end{defn}
+\noindent
+Note that in the category $\cat{Set}$ the isomorphisms are exactly the invertible mappings between sets.
+
+\medskip
+As we navigate our way from basic categories up to the statement of the lemma we will travel through multiple layers conceptual abstraction. Functors are the first step up this ladder.
 
 \section{Functors}
 
-As we navigate our way from basic categories up to the statement of the lemma we will travel through multiple layers conceptual abstraction. Functors are the first step up this ladder. Functors are the {\it arrows between categories}. That is, if you were to define the category where the objects were  categories of some kind then the arrows would be functors. Of course you have to be careful about how you do this to not get into set theory trouble, but if all the categories are small it works out.
+Functors are the {\it arrows between categories}. That is, if you were to define the category where the objects were all categories of some kind then the arrows would be functors. Of course you have to be careful about how you do this to not get into set theory trouble, but if all the categories are small it works out.
 
 \begin{defn}
 Given two categories $\CC$ and $\DD$ a {\it functor} $F : \CC \to \DD$ is defined by two sets of parallel rules. First:
@@ -245,8 +253,6 @@ You might wonder to yourself: what makes natural transformations ``natural''? Th
 Category theory loves overloaded notation, so I've done it too. Here is a list of some examples.
 
 No two writers seem to agree on what basic notations to use for basic concepts. So I've made up my own shit too.
-
-In the modern world of \LaTeX\ there is no reason to limit names to being only four or five letters in length, so where appropriate I have done the unthinkable and written some names out in full.
 
 \section{Who I Stole From}
 
