--- a/yoneda-speedrun/macros.tex
+++ b/yoneda-speedrun/macros.tex
@@ -1,10 +1,4 @@
-% Basic Category Theory
-% Tom Leinster <Tom.Leinster@ed.ac.uk>
-% 
-% Copyright (c) Tom Leinster 2014-2016
-% 
-% Macros
-% 
+%!TEX root = yoneda-speedrun.tex
 
 \usepackage{amsthm}
 
@@ -23,9 +17,6 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\usepackage{eulervm}
-\linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
