--- a/yoneda-speedrun/macros.tex
+++ b/yoneda-speedrun/macros.tex
@@ -111,6 +111,7 @@ bookmarksopenlevel=10
 \DeclareMathOperator{\Objects}{\mathit{Objects}}
 \DeclareMathOperator{\Hom}{\mathit{Hom}}
 \DeclareMathOperator{\Nat}{\mathit{Nat}}
+\DeclareMathOperator{\Fun}{\mathit{Functor}}
 \def\objc{\Objects(\cat{C})}
 \newcommand{\Set}{\fcat{Set}}           % Sets
 \newcommand{\iso}{\cong}                % Isomorphism
@@ -120,3 +121,5 @@ bookmarksopenlevel=10
 \newcommand{\gr}{\fcat{Group}}
 \newcommand{\mat}{\fcat{Matrix}}
 \newcommand{\mon}{\fcat{Monoid}}
+
+\newcommand{\fto}{\Rightarrow}
