--- a/yoneda-speedrun/main.tex
+++ b/yoneda-speedrun/main.tex
@@ -13,7 +13,6 @@ In particular the result ties together the following sets of ideas:
 \begin{itemize}
 
 \item Categories (objects and arrows).
-\item Categories and sets
 \item Functors
 \item Natural transformations
 \item Functor categories
@@ -305,7 +304,8 @@ A {\it natural isomorphism} is a natural transformation $\alpha: F \fto G$ in wh
 component $\alpha_X$ is an isomorphism. In this case, the natural isomorphism may be
 depicted as $\alpha: F \iso G$.
 \end{defn}
-
+\goodbreak
+\noindent
 In addition we'll use this notation:
 
 \begin{defn}
@@ -318,7 +318,7 @@ to work on both categories and functors.
 
 \section{Functor Categories}
 
-We are almost there, but we need to travel one more step up the abstraction ladder. We
+We are almost there, but there are a few more steps up the abstraction ladder. We
 have in our one hand objects called functors, and we have in our other hand the natural
 transformations. So the next obvious thing is to make a category out of them.
 
@@ -332,8 +332,8 @@ transformations. So the next obvious thing is to make a category out of them.
 \end{defn}
 \noindent
 Right now you should be wondering to yourself: ``wait, does this definition actually
-work?'' I have brazenly claimed without any real justification that the natural
-transformations work as arrows. Luckily it's fairly clear that this works out if you just
+work?'' I have brazenly claimed without any justification that the it's OK to use the natural
+transformations as arrows. Luckily it's fairly clear that this works out if you just
 do everything component-wise. So if we have all of these things: 
 \begin{itemize}
 \item Three functors, $F: \CC \to \DD$ and $G: \CC \to \DD$ and $H:\CC \to \DD$.
@@ -352,6 +352,33 @@ most popular seems to be $[\CC, \DD]$, but you also see $\DD^{\CC}$, and various
 abbreviations like $\mathop{\mathit{Fun}}(\CC,\DD)$ or $\mathop{\mathit{Func}}(\CC,\DD)$,
 or $\mathop{\mathit{Funct}}(\CC,\DD)$. I think we should just spell it out and use
 $\Fun(\CC,\DD)$. So there.
+
+\section{Represented Functors}
+
+The last conceptual step that we need is a way to construct {\it functors} from {\it objects}. The following
+definition is a natural way to do this.
+
+\begin{defn}
+Given a locally small category $\CC$ and an object $X \in \CC$ we define a functor
+$$
+\Arrows(X,-) : \CC \to \Set
+$$
+using the following assignments:
+\begin{itemize}
+\item A mapping from $\CC \to \Set$ that assigns to each $Y in \Objects(\CC)$ the set $\Arrows(X,Y)$
+\item A mapping from $\Arrows(\CC) \to \Arrows(\Set) $ that assigns to each arrow $f: A \to B$ the function defined by mapping each $g: X \to A$ the arrow $f\circ g$.
+\end{itemize}
+\noindent
+The functor defined this way is called the functor {\it represented} by $X$.
+\end{defn}
+\noindent
+The definition for objects here is pretty clear. But the one for arrows maybe needs some thought.
+Given an arrow $f: A \to B$, it should be the case that $\Arrows(X,-)$ 
+applied to $f$ is an arrow from $\Arrows(X,A) \to \Arrows(X,B)$. Since $\CC$ is locally small $f \in \Arrows(\Set)$. 
+Now, if $g: X \to A$ we have that $(f \circ g): X \to B$ is the arrow
+we want. This mapping on $f$ is called the {\it post-composition} mapping, since it composes $f$ {\it after} $g$. As an overloaded abuse of notation we will also write $\Arrows(X, -)(f) = \Arrows(X,f) = f \circ -$. Note how the placeholder symbols mean completely different things on each side of this formula. Some people write $f_*$ for $f \circ -$, but that doesn't seem as fun.
+
+Other notations for this functor include just $\CC(X,-)$, $\Hom(X, -)$, $\Hom_{\CC}(X, -)$, $H^X$ and $h^X$. In my notational convention we probably should have written this as $\Arrows_{\CC}(X, -)$. Some people call this kind of functor a {\it hom-functor}.
 
 \section{Opposites/Duals}
 
@@ -401,8 +428,6 @@ $F(f) \circ F(g) = F(g \circ f)$.
 Note how the arrows go backwards when they need to. With this terminology in mind, we call
 regular functors from $\CC \to \DD$ {\it covariant}.
 
-
-\section{Representables}
 
 \section{The Full Stack}
 
