--- a/yoneda-speedrun/macros.tex
+++ b/yoneda-speedrun/macros.tex
@@ -17,7 +17,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -112,6 +112,7 @@ bookmarksopenlevel=10
 \DeclareMathOperator{\Arrows}{\mathit{Arrows}}
 \DeclareMathOperator{\Objects}{\mathit{Objects}}
 \DeclareMathOperator{\Hom}{\mathit{Hom}}
+\DeclareMathOperator{\ihom}{\mathit{hom}}
 \DeclareMathOperator{\Nat}{\mathit{Nat}}
 \DeclareMathOperator{\Fun}{\mathit{Functor}}
 \def\objc{\Objects(\cat{C})}
